# custom_mosquitto

./: .gitignore  CMakeLists.txt  multitenant.c
apps/mosquitto_ctrl/: CMakeLists.txt
apps/mosquitto_signal/: signal_windows.c
custom/01-multi-active/etc/mosquitto/: mosquitto.conf.example
custom/01-multi-active/lib/pkgconfig/: libmosquitto.pc  libmosquittopp.pc
lib/: CMakeLists.txt  send_publish.c
src/: conf.c  handle_connect.c  handle_disconnect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  logging.c  mosquitto_broker_internal.h  net.c  proxy_v2.c  sys_tree.c  sys_tree.h
test/lib/c/: 03-publish-loop-manual.c  fuzzish.c
test/lib/cpp/: 03-publish-loop-manual.cpp
test/unit/broker/: CMakeLists.txt
test/unit/lib/: CMakeLists.txt  datatype_write.c
